fix: Do not register gzip filter for jobs project
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>